[metadata]
name = kabbes_dropbox_connection
version = 0.0.0
author = James Kabbes
author_email = james.kabbes@gmail.com
description = Provides a wrapper around the Dropbox Python API for file operations; edit this file 'description' to name the repository.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.org/project/kabbes-dropbox-connection/
project_urls =
    GitHub = https://github.com/jameskabbes/dropbox_connection
    Documentation = https://jameskabbes.github.io/dropbox_connection
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    dropbox
    kabbes_py_starter
    kabbes_parent_class
    kabbes_dir_ops

[options.packages.find]
where = src