[metadata]
name = kabbes_dropbox_connection
version = 0.0.0
author = James Kabbes
author_email = james.kabbes@gmail.com
description = wrapper around python dropbox package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.org/project/kabbes_dropbox_connection
project_urls =
    GitHub = https://github.com/jameskabbes/dropbox_connection
    Documentation = https://jameskabbes.github.io/dropbox_connection
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src